style: :lipstick: ⚡️ Avoiding content jumping on loading (yes, again!)

--- a/frontend/src/components/CityName/CytiName.css
+++ b/frontend/src/components/CityName/CytiName.css
@@ -3,5 +3,5 @@
 }
 
 .CityName-LoadingMessage {
-  margin: 130px 10px;
+  margin: 148px 10px;
 }
